End of Basic Concepts

--- a/DotNetCore_Concepts/wwwroot/default.html
+++ b/DotNetCore_Concepts/wwwroot/default.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Test Page</title>
 </head>
 <body>
-    Hi
+    This is my default html file
 </body>
 </html>
